--- a/GE.WebUI/Views/Articles/Details.cshtml
+++ b/GE.WebUI/Views/Articles/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@using SX.WebCore.Providers;
 @using SX.WebCore;
 
-@model VMMaterial
+@model VMArticle
 @{
     var title = ViewBag.Title;
     var h1 = ViewBag.H1;
