--- a/GE.WebUI/Views/Comments/DisplayTemplates/SxVMComment.cshtml
+++ b/GE.WebUI/Views/Comments/DisplayTemplates/SxVMComment.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNet.Identity
-@model VMComment
+@model SxVMComment
 @{
     Layout = null;
     var userId = User.Identity.GetUserId();
