--- a/GE.WebUI/Views/News/_Collection.cshtml
+++ b/GE.WebUI/Views/News/_Collection.cshtml
@@ -1,4 +1,4 @@
-﻿@model SxExtantions.SxPagedCollection<VMMaterial>
+﻿@model SxExtantions.SxPagedCollection<VMNews>
 @{
     Layout = null;
     var gameTitle=(string)ViewBag.GameTitle;
