--- a/GE.WebUI/Views/SiteTests/List.cshtml
+++ b/GE.WebUI/Views/SiteTests/List.cshtml
@@ -1,11 +1,11 @@
-﻿@model SxExtantions.SxPagedCollection<SxVMSiteTest>
+﻿@model SxExtantions.SxPagedCollection<VMSiteTest>
 @{
     ViewBag.Title = ViewBag.Title ?? "Тесты от game-exe.com";
     ViewBag.H1 = ViewBag.H1 ?? ViewBag.Title;
     ViewBag.Description = ViewBag.Description ?? "Здесь можно пройти тесты на знание игр. Оригинальные тесты. Проверьте свои знания!";
     ViewBag.Keywords = ViewBag.Keywords ?? "Тесты, проверить свои знания, оригинальные тесты";
 
-    SxVMSiteTest item;
+    VMSiteTest item;
 }
 
 @section styles{
