--- a/GE.WebUI/Views/SiteTests/_ResultNormal.cshtml
+++ b/GE.WebUI/Views/SiteTests/_ResultNormal.cshtml
@@ -1,6 +1,6 @@
-﻿@model SXVMSiteTestResult<SxVMSiteTestResultNormal>
+﻿@model VMSiteTestResult<VMSiteTestResultNormal>
 @{
-    SxVMSiteTestResultNormal item;
+    VMSiteTestResultNormal item;
     var colCount = 4;
     var rowsCount = Math.Ceiling((decimal)Model.Results.Length / colCount);
 }
