--- a/GE.WebUI/Areas/Admin/Views/Shared/_GameLookupGrid.cshtml
+++ b/GE.WebUI/Areas/Admin/Views/Shared/_GameLookupGrid.cshtml
@@ -8,7 +8,7 @@
 
     @Html.SxGridLookup(new SxExtantions.SxGridLookupSettings
 {
-    DataAjaxUrl = "/games/findgridview",
+    DataAjaxUrl = Url.Action("FindGridView", "Games"),
     DefaulText = caption == null ? Html.ValueForModel().ToString() : caption
 },
     new VMGame [0]
