--- a/GE.WebUI/Areas/Admin/Views/SiteTestSubjects/_GridView.cshtml
+++ b/GE.WebUI/Areas/Admin/Views/SiteTestSubjects/_GridView.cshtml
@@ -1,4 +1,4 @@
-﻿@model SxVMSiteTestSubject[]
+﻿@model VMSiteTestSubject[]
 @{
     Layout = null;
     var testId = (ViewBag.Filter as SxFilter).AddintionalInfo[0];
