--- a/GE.WebUI/Areas/Admin/Views/Aphorisms/Index.cshtml
+++ b/GE.WebUI/Areas/Admin/Views/Aphorisms/Index.cshtml
@@ -5,7 +5,6 @@
 }
 
 @section styles{
-    <link href="~/Content/dist/css/grid-aphorisms.min.css" rel="stylesheet" />
     <style type="text/css">
         .sx-tv a{
             text-decoration:none;
@@ -26,7 +25,7 @@
 <div class="form-group">
     <br />
     <div class="text-left">
-        <form method="post" action="/aphorisms/report">
+        <form method="post" action="@Url.Action("Report", "Aphorisms")">
             <button class="btn btn-default" type="submit"><i class="fa fa-file-excel-o" aria-hidden="true"></i> Отчет</button>
         </form>
     </div>
