--- a/GE.WebUI/Areas/Admin/Views/SiteTestQuestions/_GridView.cshtml
+++ b/GE.WebUI/Areas/Admin/Views/SiteTestQuestions/_GridView.cshtml
@@ -1,4 +1,4 @@
-﻿@model SxVMSiteTestQuestion[]
+﻿@model VMSiteTestQuestion[]
 @{
     Layout = null;
     var testId = (ViewBag.Filter as SxFilter).AddintionalInfo[0];
