--- a/GE.WebUI/Views/Home/Index.cshtml
+++ b/GE.WebUI/Views/Home/Index.cshtml
@@ -18,19 +18,6 @@
     SxVMBanner banner;
 }
 
-@if (!Request.IsLocal)
-{
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- game-exe.com -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
-     data-ad-client="ca-pub-9896332411319809"
-     data-ad-slot="8657788777"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-}
-
 @Html.Action("LastGamesNewsBlock", "News", new { lnc= 5 })
 
 @Html.Action("NewsCategories", new { controller = "News", lnc = 5 })
@@ -44,7 +31,7 @@
     if (banner != null)
     {
         <div style="margin-top:30px;">
-            @Html.SxThroughBanner(banner, (b) => Url.Action("Picture", "Pictures", new { id = b.PictureId }), b => { return Url.Action("Click", "Banners", new { bannerId = b.Id }); })
+            @Html.SxBanner(banner, (b) => Url.Action("Picture", "Pictures", new { id = b.PictureId }), b => { return Url.Action("Click", "Banners", new { bannerId = b.Id }); })
         </div>
     }
 }
