--- a/GE.WebUI/Areas/Admin/Views/MaterialCategories/Edit.cshtml
+++ b/GE.WebUI/Areas/Admin/Views/MaterialCategories/Edit.cshtml
@@ -48,6 +48,8 @@
         @Html.ValidationMessageFor(x => x.Title)
     </div>
 
+    @if (forAphorism)
+    {
     <div class="form-group">
         <div class="row">
             <div class="col-md-6">
@@ -68,6 +70,19 @@
             </div>
         </div>
     </div>
+    }
+    else
+    {
+        <div class="form-group">
+            @Html.LabelFor(x => x.FrontPictureId, new { @class = "control-label" })
+            @if (Model.FrontPictureId.HasValue)
+            {
+                <a data-original-title="Помотреть картинку" onclick="x()" data-lightbox="roadtrip" data-title="Иконка @Model.Title" data-toggle="tooltip" title="" href="/pictures/picture/@Model.FrontPictureId"><i class="fa fa-picture-o"></i></a>
+            }
+            @Html.EditorFor(x => x.FrontPictureId, new { htmlAttributes = new { @class = "form-control", @placeholder = "Выберите изображение" } })
+            @Html.ValidationMessageFor(x => x.FrontPictureId)
+        </div>
+    }
 
     <div class="form-group">
         <button type="submit" class="btn btn-primary">@(isNew ? "Добавить" : "Сохранить")</button>
