--- a/GE.WebUI/Views/Shared/_Footer.cshtml
+++ b/GE.WebUI/Views/Shared/_Footer.cshtml
@@ -37,7 +37,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <h6 class="header">Последние публикации</h6>
-                    @*@Html.Action("Last", "Articles", new { amount = 3 })*@
+                    @Html.Action("Last", "Articles", new { amount = 3 })
                 </div>
                 <div class="col-md-4">
                     <ul class="menu">
